--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.anko_version = '0.10.8'
     ext.volley_version = '1.1.1'
     ext.gson_version = '2.8.5'
+    ext.retrofit_version = '2.5.0'
     repositories {
         google()
         jcenter()
